[SPELP] : modifs